--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "burger",
   "version": "1.0.0",
-  "description": "",
+  "description": "<h1>Eat-Da-Burger</h1> <h3>Burger logger with MySQL, Node, Express, Handlebars and a homemade ORM</h3> <p> Eat-Da-Burger! is a restaurant app that lets users input the names of burgers they'd like to eat.Whenever a user submits a burger's name, your app will display the burger on the left side of the page -- waiting to be devoured.Each burger in the waiting area also has a Devour it! button. When the user clicks it, the burger will move to the right side of the page. </p>",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,5 +15,13 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.9",
     "mysql": "^2.13.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sbod2018/BurgerEats.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sbod2018/BurgerEats/issues"
+  },
+  "homepage": "https://github.com/sbod2018/BurgerEats#readme"
 }
